(Format: Year/Month/Day)
Changes for 0.9.9:
*04/03/19:
  * fluxbox-generate_menu:  (Han)
    removes the reload-menu code which is obsolete  
    since Mathias's latest patch
    fluxbox-generate_menu.in
*04/03/18:
  * Fixed menu time stamp for root menu (Thanks Mathias Gumz)
    the root menu now reloads if you edit the menu file
    Screen.cc
  * Added Control-c to the TextBox.cc so the (Thanks Mathias Gumz)
    TextBox gets cleared if one presses Control-c
    TextBox.cc
  * Fixed so @ and | works in text box (Thanks Mathias Gumz)	
    TextBox.cc
*04/03/16:
  * Minor fix for ${INSTALL} and reload fluxbox menu  (Han)
    with fluxbox-generate_menu
  * Fix the fix, and a bit more for placeWindow (Simon)
    Workspace.cc
*04/03/15:
  * bug in placeWindow caused spinning with screens higher than width
    e.g. vertical xinerama   (Simon)
    Workspace.cc
*04/03/13:
  * Fixed so it compiles in cygwin (Henrik)
    I18n.hh
*04/03/11:
  * fbsetbg updates: (Han)
    * Check if Esetroot was linked with Imlib
    * Add support for gxmessage (looks much nicer)
    * Send all messages to xmessage/gxmessage because test -t is also true
      when startx is used.
    * Add compat note for $UID
  * fbsetbg: special Esetroot check and message improvements (Han)
*04/03/08:
  * Fix focus passing when grouping (Simon)
    Window.cc
  * Fix receipt of _NET_WM_DESKTOP client messages (Simon)
    - fixes xmms "show on all desktops" not working
    Ewmh.cc
*04/03/03:
  * Fix update of keys on keymap change (Simon)
    fluxbox.cc
  * Fix outline moving dropping on source workspace made window 
    disappear [we now explicitly don't unfocus a moving window] (Simon) 
    Window.cc fluxbox.cc
  * Updated finnish locales for fluxbox-generate_menu (Thanks Lauri Hakkarainen)
*04/03/02:
  * fluxbox-generate_menu changes: (Han)
    * Updated German locales from Mathias Gumz
    * More firefox support.
    * Updated compat-notes.
*04/02/28: